--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
   <body>
     <div id="sidebar"></div>
     <div id="modules"></div>
-    <div id="project"></div>
+    <div id="project">
+      <h1 class="project-name"></h1>
+      <h2>README</h2>
+      <div class="wikistyle">
+      </div>
+    </div>
   </body>
 </html>
