--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link media="screen" rel="stylesheet" type="text/css" href="/stylesheets/reset.css" />
     <link media="screen" rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <script src="/javascripts/jquery-1.6.2.min.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery.flot.js" type="text/javascript"></script>
     <script src="/javascripts/application.js" type="text/javascript"></script>
     <script src="/modules.js" type="text/javascript"></script>
   </head>
@@ -14,6 +15,8 @@
     <div id="modules"></div>
     <div id="project">
       <h1 class="project-name"></h1>
+      <h2>Stats</h2>
+      <div class="project-stats" style="width:600px;height:300px"></div>
       <h2>README</h2>
       <div class="wikistyle">
       </div>
