--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div id="modules"></div>
     <div id="project">
       <h1 class="project-name"></h1>
-      <h2>Stats</h2>
+      <h2>STATS</h2>
       <div class="project-stats" style="width:600px;height:300px"></div>
       <h2>README</h2>
       <div class="wikistyle">
