--- a/public/underwood.html
+++ b/public/underwood.html
@@ -6,8 +6,13 @@
     <link media="screen" rel="stylesheet" type="text/css" href="/stylesheets/reset.css" />
     <link media="screen" rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <style>
+      body {
+        padding: 10px;
+      }
       .story {
         margin-bottom: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #888;
         line-height: 1.5em;
       }
     </style>
